# obs-teleprompter

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  index.html
.github/workflows/: build.yml
data/locale/: en-US.ini
src/: plugin-main.cpp  teleprompter-dock.cpp  teleprompter-dock.hpp
src/cmake/: NSIS.template.in
